--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -293,7 +293,6 @@
 .tables__unMark {
   width: 20px;
   height: 20px;
-  background: url("../img/tables/unmark.svg") center no-repeat;
   background-size: cover !important;
 }
 .tables__btn {
@@ -1187,6 +1186,7 @@
     width: 63%;
   }
   .tables__tableItm:nth-child(2) {
+    display: none;
     width: 37%;
     padding-right: 0;
     padding-left: 16px;
@@ -1207,6 +1207,8 @@
     display: flex;
     overflow-x: scroll;
     padding-bottom: 24px;
+    width: 105%;
+    padding-right: 8px;
   }
   .mob-tables__tableRow_th-item {
     background-color: #ffffff;
@@ -1214,12 +1216,19 @@
     box-shadow: 0px 5px 20px -3px rgba(176, 176, 176, 0.4);
     color: #2f2f2f;
     font-size: 12px;
-    line-height: 19px;
+    line-height: 12px;
     font-weight: 700;
     padding: 16px 20px;
     width: fit-content;
     text-wrap: nowrap;
     margin-right: 8px;
     height: 44px;
+  }
+  .tables__tableItm-show {
+    display: flex !important;
+  }
+  .active-mob-tales-th {
+    background: #ff8562;
+    color: #fff;
   }
 }
