--- a/assets/css/reviews.css
+++ b/assets/css/reviews.css
@@ -16,8 +16,18 @@
 .reviews-slide p {
     margin-bottom: 32px;
 }
+.reviews__page-items .col-12 {
+    margin-bottom: 24px;
+}
 @media (max-width: 576px) {
     .reviews__page-content {
         padding-top: 60px;
+    }
+    .reviews-slide {
+        width: 100%;
+        max-width: none;
+    }
+    .reviews__page-items .col-12 {
+        margin-bottom: 16px;
     }
 }
